# cqrs-sqlite-sea-orm

./: Cargo.toml  README.md  justfile
curl/: test_api.sh
migrations/: 20221114171845_init.down.sql  20221114171845_init.up.sql  20221120155136_account_table.up.sql  20221122174705_ledger_entries.up.sql  20221122180929_checks.up.sql
src/: config.rs  main.rs  route_handler.rs  state.rs
src/bank_account/: aggregate.rs  mod.rs  queries.rs
src/bank_account/models/: accounts.rs  checks.rs  ledger_entries.rs  mod.rs  prelude.rs
