[package]
name = "cqrs-sqlite-sea-orm"
version = "0.0.0"
authors = ["John Bledsoe",
           "Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "sqlite"]
description = "A demo application for using sea-orm with cqrs-es and sqlite-es."
repository = "https://github.com/johnbcodes/cqrs-sqlite-sea-orm"
readme = "README.md"
publish = false

[dependencies]
async-trait = "0.1"
axum = "0.5"
cqrs-es = "0.4.5"
sea-orm = { version = "0.10", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlite-es = "0.4.5"
sqlx = { version = "0.6", features = [ "sqlite" , "runtime-tokio-rustls", "json" ] }
time = { version = "0.3", features = [ "formatting" ] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = "0.3"
tracing = "0.1"
