[package]
name = "cqrs-sqlite-sea-orm"
version = "0.1.1"
authors = ["John Bledsoe",
           "Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "sqlite"]
description = "A demo application using sea-orm with cqrs-es and sqlite-es."
repository = "https://github.com/johnbcodes/cqrs-sqlite-sea-orm"
readme = "README.md"
publish = false

[dependencies]
async-trait = "0.1"
axum = "0.7"
cqrs-es = "0.4"
sea-orm = { version = "1.1.0-rc.1", default-features = false, features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlite-es = "0.4"
sqlx = { version = "0.8", features = [ "json", "runtime-tokio-rustls", "sqlite" ] }
time = { version = "0.3", features = [ "formatting" ] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
